content/v1.4.5/en/api/campaign/TradeAgreementsCampaignBehavior.md
---
title: "TradeAgreementsCampaignBehavior"
description: "Auto-generated class reference for TradeAgreementsCampaignBehavior."
---
# TradeAgreementsCampaignBehavior

**Namespace:** TaleWorlds.CampaignSystem.CampaignBehaviors
**Module:** TaleWorlds.CampaignSystem
**Type:** `public class TradeAgreementsCampaignBehavior : CampaignBehaviorBase, ITradeAgreementsCampaignBehavior`
**Base:** `CampaignBehaviorBase`
**File:** `bin/TaleWorlds.CampaignSystem/TaleWorlds.CampaignSystem.CampaignBehaviors/TradeAgreementsCampaignBehavior.cs`

## Overview

`TradeAgreementsCampaignBehavior` lives in `TaleWorlds.CampaignSystem.CampaignBehaviors` and exposes the state, behavior, or workflow entry points of that subsystem to mod developers through its public members. Read its properties as “what state it owns” and its methods as “what actions it allows”.

## Mental Model

Start from namespace `TaleWorlds.CampaignSystem.CampaignBehaviors` to place it in the stack, then inspect its public methods: if it mainly exposes Get/Set members, it is likely a state object; if it centers on Create/Apply/Execute verbs, it behaves more like a service or workflow entry point.

## Key Methods

### AddGainedGoldToKingdom
`public TradeAgreement AddGainedGoldToKingdom(Kingdom kingdom, int gold)`

**Purpose:** **Purpose:** Adds gained gold to kingdom to the current collection or state.

```csharp
// Obtain an instance of TradeAgreementsCampaignBehavior from the subsystem API first
TradeAgreementsCampaignBehavior tradeAgreementsCampaignBehavior = ...;
var result = tradeAgreementsCampaignBehavior.AddGainedGoldToKingdom(kingdom, 0);
```

### OnGoldSharedInKingdom
`public TradeAgreement OnGoldSharedInKingdom(Kingdom kingdom, int gold)`

**Purpose:** **Purpose:** Invoked when the gold shared in kingdom event is raised.

```csharp
// Obtain an instance of TradeAgreementsCampaignBehavior from the subsystem API first
TradeAgreementsCampaignBehavior tradeAgreementsCampaignBehavior = ...;
var result = tradeAgreementsCampaignBehavior.OnGoldSharedInKingdom(kingdom, 0);
```

### AutoGeneratedStaticCollectObjectsTradeAgreement
`public static void AutoGeneratedStaticCollectObjectsTradeAgreement(object o, List<object> collectedObjects)`

**Purpose:** **Purpose:** Executes the AutoGeneratedStaticCollectObjectsTradeAgreement logic.

```csharp
// Static call; no instance required
TradeAgreementsCampaignBehavior.AutoGeneratedStaticCollectObjectsTradeAgreement(o, collectedObjects);
```

### RegisterEvents
`public override void RegisterEvents()`

**Purpose:** **Purpose:** Registers events with the current system so it can later be observed or dispatched.

```csharp
// Obtain an instance of TradeAgreementsCampaignBehavior from the subsystem API first
TradeAgreementsCampaignBehavior tradeAgreementsCampaignBehavior = ...;
tradeAgreementsCampaignBehavior.RegisterEvents();
```

### OnTradeAgreementOfferedToPlayer
`public void OnTradeAgreementOfferedToPlayer(Kingdom fromKingdom)`

**Purpose:** **Purpose:** Invoked when the trade agreement offered to player event is raised.

```csharp
// Obtain an instance of TradeAgreementsCampaignBehavior from the subsystem API first
TradeAgreementsCampaignBehavior tradeAgreementsCampaignBehavior = ...;
tradeAgreementsCampaignBehavior.OnTradeAgreementOfferedToPlayer(fromKingdom);
```

### SyncData
`public override void SyncData(IDataStore dataStore)`

**Purpose:** **Purpose:** Synchronizes data across the relevant contexts or systems.

```csharp
// Obtain an instance of TradeAgreementsCampaignBehavior from the subsystem API first
TradeAgreementsCampaignBehavior tradeAgreementsCampaignBehavior = ...;
tradeAgreementsCampaignBehavior.SyncData(dataStore);
```

### MakeTradeAgreement
`public void MakeTradeAgreement(Kingdom kingdom1, Kingdom kingdom2, CampaignTime duration)`

**Purpose:** **Purpose:** Executes the MakeTradeAgreement logic.

```csharp
// Obtain an instance of TradeAgreementsCampaignBehavior from the subsystem API first
TradeAgreementsCampaignBehavior tradeAgreementsCampaignBehavior = ...;
tradeAgreementsCampaignBehavior.MakeTradeAgreement(kingdom1, kingdom2, duration);
```

### EndTradeAgreementsOfKingdom
`public void EndTradeAgreementsOfKingdom(Kingdom kingdom)`

**Purpose:** **Purpose:** Executes the EndTradeAgreementsOfKingdom logic.

```csharp
// Obtain an instance of TradeAgreementsCampaignBehavior from the subsystem API first
TradeAgreementsCampaignBehavior tradeAgreementsCampaignBehavior = ...;
tradeAgreementsCampaignBehavior.EndTradeAgreementsOfKingdom(kingdom);
```

### EndTradeAgreement
`public void EndTradeAgreement(Kingdom kingdom1, Kingdom kingdom2)`

**Purpose:** **Purpose:** Executes the EndTradeAgreement logic.

```csharp
// Obtain an instance of TradeAgreementsCampaignBehavior from the subsystem API first
TradeAgreementsCampaignBehavior tradeAgreementsCampaignBehavior = ...;
tradeAgreementsCampaignBehavior.EndTradeAgreement(kingdom1, kingdom2);
```

### HasTradeAgreement
`public bool HasTradeAgreement(Kingdom kingdom1, Kingdom kingdom2, out TradeAgreement tradeAgreement)`

**Purpose:** **Purpose:** Determines whether the this instance already holds trade agreement.

```csharp
// Obtain an instance of TradeAgreementsCampaignBehavior from the subsystem API first
TradeAgreementsCampaignBehavior tradeAgreementsCampaignBehavior = ...;
var result = tradeAgreementsCampaignBehavior.HasTradeAgreement(kingdom1, kingdom2, tradeAgreement);
```

### GetTradeAgreementEndDate
`public CampaignTime GetTradeAgreementEndDate(Kingdom kingdom1, Kingdom kingdom2)`

**Purpose:** **Purpose:** Reads and returns the trade agreement end date value held by the this instance.

```csharp
// Obtain an instance of TradeAgreementsCampaignBehavior from the subsystem API first
TradeAgreementsCampaignBehavior tradeAgreementsCampaignBehavior = ...;
var result = tradeAgreementsCampaignBehavior.GetTradeAgreementEndDate(kingdom1, kingdom2);
```

### OnTradeGoldDistributedInKingdom
`public void OnTradeGoldDistributedInKingdom(Kingdom kingdom1, Kingdom kingdom2, Clan clan, int share)`

**Purpose:** **Purpose:** Invoked when the trade gold distributed in kingdom event is raised.

```csharp
// Obtain an instance of TradeAgreementsCampaignBehavior from the subsystem API first
TradeAgreementsCampaignBehavior tradeAgreementsCampaignBehavior = ...;
tradeAgreementsCampaignBehavior.OnTradeGoldDistributedInKingdom(kingdom1, kingdom2, clan, 0);
```

## Usage Example

```csharp
// Typically call this after obtaining an instance from the subsystem API
TradeAgreementsCampaignBehavior tradeAgreementsCampaignBehavior = ...;
tradeAgreementsCampaignBehavior.AddGainedGoldToKingdom(kingdom, 0);
```

## See Also

- [Area Index](../)